--- a/DataApp/appsettings.json
+++ b/DataApp/appsettings.json
@@ -1,5 +1,11 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=DataAppDb;MultipleActiveResultSets=true"
+  },
+  "Loggin": {
+    "LogLevel": {
+      "Deafault": "None",
+      "Microsoft.EntityframeworkCore":  "Information"
+    }
   }
 }
